# neoncore

./: Cargo.toml  LICENSE  README.MD  README.md  sample.sq
examples/: elf_reader.rs  pattern_ser.rs
src/: const_fn.rs  int_util.rs  lib.rs  sate_machines.rs  stream_query.pest  stream_util.rs  structlang.pest  varint.rs
src/streams/: advanced_readers.rs  helpers.rs  mod.rs  read.rs  structlang.rs  write.rs
