[package]
name = "neoncore"
version = "5.0.0"
authors = ["Matheus Xavier <mxavier@neonlayer.com>"]
license = "BSD-3-Clause"
description = "Core utility library for working with binary DATA streams."
edition = "2021"
repository = "https://github.com/neonimp/neoncore.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lto
[profile.release]
lto = true
opt-level = 3

[dependencies]
byteorder = "1.4.3"
parking_lot = "0.12.1"
paste = "1.0.12"
thiserror = "1.0.40"
