[package]
name = "neoncore"
version = "7.0.0"
authors = ["Matheus Xavier <xavier@duplexworks.com>"]
license = "BSD-3-Clause"
description = "Core utility library for working with binary data streams."
edition = "2021"
repository = "https://github.com/neonimp/neoncore.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# lto
[profile.release]
lto = true
opt-level = 3

[dependencies]
byteorder = "1.4.3"
parking_lot = { version = "0.12.1", optional = true }
paste = "1.0.12"
thiserror = { version = "1.0.40", optional = true }

[features]
default = ["std"]
std = ["parking_lot", "thiserror"]
